# LinkScribe

./: Base_de_datos.db  model_loader.py
backend/: Prueba_web.ipynb  api.py  model_loader.py  pyproject.toml  textPrepo.py  url_scraping.py  vectorizador.joblib  vectorizador.pkl  website_classification_eda_support_vector_93_accur.ipynb
backend/models/tf/iris_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
backend/models/tf/iris_model/variables/: variables.data-00000-of-00001  variables.index
frontend/: Dockerfile  dockerignore  home.py  pyproject.toml  users.db
frontend/pages/: About Me.py  Iniciar Sesion.py  Registrate.py  listarcategorias.py
