[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <tu@ejemplo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.27.2"
requests = "^2.31.0"
watchdog = "^3.0.0"
pandas = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
